<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zerju.demogame.Main2Activity"
    android:background="@drawable/menu_gradient"
    android:animateLayoutChanges="true">

    <Button
        android:text="@string/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:id="@+id/playButton"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"/>

    <Button
        android:text="@string/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/playButton"
        android:layout_alignStart="@+id/playButton"
        android:layout_marginTop="19dp"
        android:id="@+id/settingsButton"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:text="@string/homeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:id="@+id/textView"
        android:textSize="60sp"
        style="@style/menuGameName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
